--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+#Для реального проекту ---
+
+# for test
+/coverage
+# 
+/public
+
+#------
+
 # Ignore bundler config.
 /.bundle
 
